<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ekleme_background"
    tools:context=".AddingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:baselineAlignBottom="true"
            android:onClick="clickToMainFromAdding"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:baselineAlignBottom="true"
            android:layout_weight="1"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/profil_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:baselineAlignBottom="true"
            android:layout_weight="1"
            android:onClick="clickToProfilFromAdding"
            app:srcCompat="@drawable/person" />
    </LinearLayout>




    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ekleme_bar" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/seffaf_ekran" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/kamera_konum" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_adam" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="285dp"
        android:layout_marginStart="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="285dp"
        android:layout_marginStart="250dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_elsmoke"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"/>

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/btn_kategori" />


</RelativeLayout>