<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>



    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/barr" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:onClick="click"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/oturum_ac_b"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/username_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/username"
        android:textSize="30sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_info"
        android:hint="@string/username"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_info"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/oturum_ac_b" />








</RelativeLayout>